[tool.poetry]
name = "spotify"
version = "0.1.0"
description = ""
authors = ["Justin Lam <contact@justinmklam.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
spotipy = "^2.22.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
